objects/Processus__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MasterProcessus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processus maître</label>
        <referenceTo>Processus__c</referenceTo>
        <relationshipLabel>Processus enfants</relationshipLabel>
        <relationshipName>MasterProcessus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRC_NoMatchedWithRFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non identifié dans le RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_Status__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En définition</fullName>
                    <default>true</default>
                    <label>En définition</label>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <label>Projet</label>
        <referenceTo>Projet__c</referenceTo>
        <relationshipName>Business_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <label>Titre</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demandeur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demandeur / Référent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Processus</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>PRC_Status__c</columns>
        <columns>Scope__c</columns>
        <columns>demandeur__c</columns>
        <columns>MasterProcessus__c</columns>
        <columns>PRC_NoMatchedWithRFP__c</columns>
        <columns>Projet__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <listViews>
        <fullName>Processus_Services</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>PRC_Status__c</columns>
        <columns>PRC_NoMatchedWithRFP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Services,Field Services</value>
        </filters>
        <label>Processus Services</label>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>PRC_Status__c</columns>
        <columns>Scope__c</columns>
        <columns>demandeur__c</columns>
        <columns>MasterProcessus__c</columns>
        <columns>PRC_NoMatchedWithRFP__c</columns>
        <columns>Projet__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Processus sales</label>
    </listViews>
    <nameField>
        <label>Numéro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>